--- a/Web App/GB_Webpage/GB_Webpage/wwwroot/css/index.css
+++ b/Web App/GB_Webpage/GB_Webpage/wwwroot/css/index.css
@@ -1,4 +1,6 @@
 ﻿.fixed-background {
+	width: 100%;
+	height: 100%;
 	animation: banner 0.3s;
 	background-image: url(/images/Background.jpg);
 	background-repeat: no-repeat;
